syntax = "proto3";

option java_package = "com.hipaduck.chillaxingcat";
option java_multiple_files = true;

// 생성/수정시 https://developers.google.com/protocol-buffers/docs/proto3?hl=ko 참고
message Settings {
  // local notification enabled value
  bool notification_enabled = 1;
  string reminder_time = 2;
  string reminder_text = 3;
  string goal_rest_time = 4;
}